[package]
name = "solver"
version = "0.2.7"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", features = ["custom-alloc", "rayon"], default-features = false }
rayon = "1.10.0"
wasm-bindgen-rayon = "1.0"
spmc = "0.3.0"
wasm-bindgen = "0.2.87"
crossbeam-channel = "0.5.13"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
